back from germany work yay

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,10 +24,10 @@
                     <div class="background-blue" >
                         <div class = "selected-map">
                             <div class = map-icon>
-                                <img class = "gamemode-icon" src = "{% static 'images/brawl_ball_icon.png' %}" >
+                                <img class = "gamemode-icon" src = "{{mode_icon_link}}">
                             </div>
                             <div class = "mode-name">
-                                BRAWL BALL
+                                {{chosen_mode}}
                             </div>
                             <div class = "map-name">
                                 Field Goal
