maps and modes chosen randomly from api, preppin for postgresql inclusion

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,7 +30,7 @@
                                 {{chosen_mode}}
                             </div>
                             <div class = "map-name">
-                                Field Goal
+                                {{chosen_map}}
                             </div>
                         </div>
                         <div class="wrapper-to-make-overflow-y-visible-because-apparently-you-cant-have-overflow-x-scroll-and-y-visible-which-makes-sense">
