--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,7 +16,7 @@
                 <div class = "col2">
                     <img class = 'pl-logo' src="{% static 'images/pd_icon.svg' %}" alt="My image">
                 </div>
-                <div class = "col3 "><h5>Powerdraft {{ MEDIA_URL }} </h5> </div>
+                <div class = "col3 "><h1>Powerdraft {{ MEDIA_URL }} </h1> </div>
             </div>
             <div class="row align-items-center justify-content-md-center">
                 <div class="draft-container background-black">
@@ -94,6 +94,126 @@
                             </div>
                         </div>
                     </div> 
+                </div>
+            </div>
+
+            <div class = "row mt-3">
+                <div><h4>Top picks:</h4></div>
+            </div>
+            <div class = "row">
+                <div class = "col-lg-6">
+                    <div class = "row">
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class = "col-lg-6">
+                    <div class = "row">
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class = "row">
+                <div class = "col-lg-6">
+                    <div class = "row">
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class = "col-lg-6">
+                    <div class = "row">
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                        <div class = "col-lg-3">
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
+                            <h4>1. Squeak </h4>
+                            <h5>Win rate: <strong>99.9%</strong></h5>
+                            <h5>Use rate: <strong>55.5%</strong></h5>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
