--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -100,128 +100,60 @@
             <div class = "row mt-3">
                 <div><h4>Top picks:</h4></div>
             </div>
+            <!-- what happens on every loop moment is in my_loop.html file in case sth breaks up in future -->
+            {% for top_brawler in top_brawlers %}
 
-            
+                {% if forloop.counter0|divisibleby:8 %}
+                    
+                    {% if not forloop.first %}
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
+                <div class = "row">
+                    <div class = "col-lg-6">
+                        <div class = "row">
+                            <div class = "col-lg-3">
+                                <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/{{top_brawler.brawler_name}}.png">
+                                <h4>{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
+                                <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
+                                <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
+                                <h5>Viability: <strong>{{top_brawler.viability}}%</strong></h5>
 
-
-            <div class = "row">
-                <div class = "col-lg-6">
-                    <div class = "row">
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
+                            </div>                
+                {% elif forloop.counter0|divisibleby:4 %}
                     </div>
                 </div>
                 <div class = "col-lg-6">
                     <div class = "row">
                         <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
+                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/{{top_brawler.brawler_name}}.png">
+                            <h4>{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
+                            <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
+                            <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
+                            <h5>Viability: <strong>{{top_brawler.viability}}%</strong></h5>
+
                         </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
+
+                {% else %}
+
+                <div class = "col-lg-3">
+                    <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/{{top_brawler.brawler_name}}.png">
+                    <h4>{{forloop.counter}} {{top_brawler.brawler_name}} </h4>
+                    <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
+                    <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
+                    <h5>Viability: <strong>{{top_brawler.viability}}%</strong></h5>
+
+                </div>
+                {% endif %}
+                {% if forloop.last %}
                         </div>
                     </div>
                 </div>
+                {% endif %}
+            {% endfor %}
             </div>
-            <div class = "row">
-                <div class = "col-lg-6">
-                    <div class = "row">
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                    </div>
-                </div>
-                <div class = "col-lg-6">
-                    <div class = "row">
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                        <div class = "col-lg-3">
-                            <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/Squeak.png">
-                            <h4>1. Squeak </h4>
-                            <h5>Win rate: <strong>99.9%</strong></h5>
-                            <h5>Use rate: <strong>55.5%</strong></h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        </body>
         <script>
             // first set the value you will be using.
             var pic_src = "{% static 'images/pl-logo-bg-4.png' %}"
