--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+        <link rel="stylesheet" href="{% static 'css/dropdown.css' %}">
         <title> powerdraft </title>
     </head>
 
     <body>
-
         <div class="container">
             <div class="row mt-5 align-items-center justify-content-md-center">
                 <div class = "col2">
@@ -20,8 +20,38 @@
             </div>
             <div class="row align-items-center justify-content-md-center">
                 <div class="draft-container background-black">
+                    
+                    <!-- from what i understand in order to display over other elements the parent needs to be at least a sibling of the element displayed 
+                        on so i cant put my display list inside of the map container  -->
+                    <div class="dropdown">
+                        <div class = "dropdown-invis-btn"></div>
+                        <div class = "dropdown-content-container">
+                            <div class="dropdown-content-bg"></div>
+                            <div class="dropdown-content"> 
+                                <div class = map-icon>
+                                    <img class = "gamemode-icon" src = "{{mode_icon_link}}">
+                                </div>
+                                <div class = "mode-name">
+                                    {{chosen_mode}}
+                                </div>
+                                <div class = "map-name">
+                                    {{chosen_map}}
+                                </div>
+                            </div>
+
+                        </div>
+                        
+                        <div class = "dropdown-content-container">
+                            <div class="dropdown-content-bg"></div>
+                            <div class="dropdown-content">
+                            </div>
+
+                        </div>
+                    </div>
+                
                     <div class="background-blue" >
                         <div class = "selected-map">
+                            <!-- displays random map at first -->
                             <div class = map-icon>
                                 <img class = "gamemode-icon" src = "{{mode_icon_link}}">
                             </div>
@@ -31,7 +61,9 @@
                             <div class = "map-name">
                                 {{chosen_map}}
                             </div>
+                            <!-- onclick you can choose which map you want -->
                         </div>
+
                         <div class="wrapper-to-make-overflow-y-visible-because-apparently-you-cant-have-overflow-x-scroll-and-y-visible-which-makes-sense">
                             
                             <div class = "brawler-searchbox">
@@ -118,7 +150,7 @@
                                 <h4>{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
                                 <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
                                 <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
-                                <h5>Viability: <strong>{{top_brawler.viability}}%</strong></h5>
+                                <h5>Viability: <strong>{{top_brawler.viability}}</strong></h5>
 
                             </div>                
                 {% elif forloop.counter0|divisibleby:4 %}
@@ -131,8 +163,7 @@
                             <h4>{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
                             <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
                             <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
-                            <h5>Viability: <strong>{{top_brawler.viability}}%</strong></h5>
-
+                            <h5>Viability: <strong>{{top_brawler.viability}}</strong></h5>
                         </div>
 
                 {% else %}
@@ -142,7 +173,7 @@
                     <h4>{{forloop.counter}} {{top_brawler.brawler_name}} </h4>
                     <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
                     <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
-                    <h5>Viability: <strong>{{top_brawler.viability}}%</strong></h5>
+                    <h5>Viability: <strong>{{top_brawler.viability}}</strong></h5>
 
                 </div>
                 {% endif %}
@@ -163,6 +194,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/dropdown.js' %}"></script>
     </body>
 </html>
 
