--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -34,7 +34,7 @@ h5 {
     overflow: hidden;
     margin-top: 4rem;
     border: 1px solid #000000;
-    width: 100vw;
+    width: 100%;
     height: 60vh;
     border-radius: 4px;
     border-width: 0px;
@@ -48,14 +48,13 @@ h5 {
 .black-rectangle{
     background-color: black;
     height:18%;
-    width:25%;
+    width:28%;
     position:absolute;
     top:-1%;
     clip-path: polygon(0 0, 100% 0%, 98% 100%, 0% 100%);
-
 }
 .selected-map{
-    background-image: linear-gradient(95deg, rgba(139,160,223,255) 15.5%, rgba(139,160,223,255) 97.5%, black 98%);
+    background-color: rgb(139,160,223,255);
     right:0.25vh;
     height: 100%;
     width:85%;
