--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,8 @@
 <html lang="en">
     <head>
         {% load static %}
+        {% load templatetags %}
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -12,6 +14,7 @@
 
     <body>
         <div class="container">
+
             <div class="row mt-5 align-items-center justify-content-md-center">
                 <div class = "col2">
                     <img class = 'pl-logo' src="{% static 'images/pd_icon.svg' %}" alt="My image">
@@ -25,67 +28,37 @@
                         on so i cant put my display list inside of the map container  -->
                     <div class="dropdown">
                         <div class = "dropdown-invis-btn"></div>
-                            <div class = "row dropdown-row">
-                                <div class = "column-3">
+                        <input type = "search-text no-padding" id = "dropdown-search" brawler-search placeholder="Search for map"></h3>
+                            <div class = "row">
+                                <!-- loop over 0,1,2 -> 3 elements in total -->
+                                {% for i in '012'|make_list %} 
+                                <div class = "col-3">
+                                    {% for j in '012345'|make_list %}
+
+                                    {% current_map maps i j as map %}
+
+                                    {% if forloop.counter0 == 3 %}
+                                        <br>
+                                    {% endif %}
                                     <div class = "dropdown-content-container">
                                         <div class="dropdown-content-bg"></div>
                                         <div class="dropdown-content"> 
                                             <div class = map-icon>
-                                                <img class = "gamemode-icon" src = "{{mode_icon_link}}">
+                                                <img class = "gamemode-icon" src = "{{map.mode_name.mode_icon}}">
                                             </div>
+                                            
                                             <div class = "mode-name">
-                                                {{chosen_mode}}
+                                                {{map.mode_name}}
+
                                             </div>
                                             <div class = "map-name">
-                                                {{chosen_map}}
+                                                {{map.map_name}}
                                             </div>
                                         </div>
                                     </div>
-                                    <div class = "dropdown-content-container">
-                                        <div class="dropdown-content-bg"></div>
-                                        <div class="dropdown-content">
-                                            <div class = map-icon>
-                                                <img class = "gamemode-icon" src = "{{mode_icon_link}}">
-                                            </div>
-                                            <div class = "mode-name">
-                                                {{chosen_mode}}
-                                            </div>
-                                            <div class = "map-name">
-                                                {{chosen_map}}
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class = "dropdown-content-container">
-                                        <div class="dropdown-content-bg"></div>
-                                        <div class="dropdown-content">
-                                            <div class = map-icon>
-                                                <img class = "gamemode-icon" src = "{{mode_icon_link}}">
-                                            </div>
-                                            <div class = "mode-name">
-                                                {{chosen_mode}}
-                                            </div>
-                                            <div class = "map-name">
-                                                {{chosen_map}}
-                                            </div>
-                                        </div>
-                                    </div>
+                                    {% endfor %}
                                 </div>
-                            <div class = "column-3">
-                                <div class = "dropdown-content-container">
-                                    <div class="dropdown-content-bg"></div>
-                                    <div class="dropdown-content">
-                                        <div class = map-icon>
-                                            <img class = "gamemode-icon" src = "{{mode_icon_link}}">
-                                        </div>
-                                        <div class = "mode-name">
-                                            {{chosen_mode}}
-                                        </div>
-                                        <div class = "map-name">
-                                            {{chosen_map}}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                                {% endfor %}
                         </div>
                     </div>
                     <div class="background-blue" >
