--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -177,6 +177,7 @@ h5 {
 .hide{
     display: none !important;
     overflow: hidden;
+    height: 0 !important;
 }
 
 .my-row>img{
@@ -220,8 +221,8 @@ h5 {
     margin:0;
 }
 .no-padding{
-    padding:0%;
-    margin:0%;
+    padding:0 !important; 
+    margin:0 !important;
 }
 
 
