--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,11 +38,11 @@
                                     {% current_map maps i j as map %}
 
                                     {% if forloop.counter0 == 3 %}
-                                        <br>
+                                        <br class="full-disp-break">
                                     {% endif %}
                                     <div class = "dropdown-content-container">
                                         <div class="dropdown-content-bg"></div>
-                                        <div class="dropdown-content"> 
+                                        <div class="dropdown-content" style="background-color: {{ map.mode_name.mode_color }}"> 
                                             <div class = map-icon>
                                                 <img class = "gamemode-icon" src = "{{map.mode_name.mode_icon}}">
                                             </div>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="background-blue" >
                         <div class = "black-rectangle">
-                            <div class = "selected-map">
+                            <div class = "selected-map"  style="background-color: {{ chosen_mode.mode_color }}">
                                 <!-- displays random map at first -->
                                 <div class = map-icon>
                                     <img class = "gamemode-icon" src = "{{mode_icon_link}}">
