--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
     <head>
         {% load static %}
         {% load templatetags %}
-
+        {% csrf_token %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -161,10 +161,10 @@
                         <div class = "row">
                             <div class = "col-lg-3">
                                 <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/{{top_brawler.brawler_name}}.png">
-                                <h4>{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
-                                <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
-                                <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
-                                <h5>Viability: <strong>{{top_brawler.viability}}</strong></h5>
+                                <h4 id = "brawler_name_{{forloop.counter0}}">{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
+                                <h5 id ="win_rate{{forloop.counter0}}">Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
+                                <h5 id = "use_rate{{forloop.counter0}}">Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
+                                <h5 id = "viability{{forloop.counter0}}">Viability: <strong>{{top_brawler.viability}}</strong></h5>
 
                             </div>                
                 {% elif forloop.counter0|divisibleby:4 %}
@@ -174,20 +174,20 @@
                     <div class = "row">
                         <div class = "col-lg-3">
                             <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/{{top_brawler.brawler_name}}.png">
-                            <h4>{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
-                            <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
-                            <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
-                            <h5>Viability: <strong>{{top_brawler.viability}}</strong></h5>
+                            <h4 id = "brawler_name_{{forloop.counter0}}">{{forloop.counter}}. {{top_brawler.brawler_name}}</h4>
+                            <h5 id ="win_rate{{forloop.counter0}}">Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
+                            <h5 id = "use_rate{{forloop.counter0}}">Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
+                            <h5 id = "viability{{forloop.counter0}}">Viability: <strong>{{top_brawler.viability}}</strong></h5>
                         </div>
 
                 {% else %}
 
                 <div class = "col-lg-3">
                     <img class = "mb-2 img-responsive img-fluid" src="{{STATIC_URL}}/images/brawlers/{{top_brawler.brawler_name}}.png">
-                    <h4>{{forloop.counter}} {{top_brawler.brawler_name}} </h4>
-                    <h5>Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
-                    <h5>Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
-                    <h5>Viability: <strong>{{top_brawler.viability}}</strong></h5>
+                    <h4 id = "brawler_name_{{forloop.counter0}}">{{forloop.counter}} {{top_brawler.brawler_name}} </h4>
+                    <h5 id ="win_rate{{forloop.counter0}}">Win rate: <strong>{{top_brawler.win_rate}}%</strong></h5>
+                    <h5 id = "use_rate{{forloop.counter0}}">Use rate: <strong>{{top_brawler.use_rate}}%</strong></h5>
+                    <h5 id = "viability{{forloop.counter0}}">Viability: <strong>{{top_brawler.viability}}</strong></h5>
 
                 </div>
                 {% endif %}
@@ -202,9 +202,8 @@
         <script>
             // first set the value you will be using.
             var pic_src = "{% static 'images/pl-logo-bg-4.png' %}"
-
         </script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="{% static 'js/main.js' %}"></script>
