divided brawlers into classes

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -80,7 +80,7 @@
                             
                             <div class = "brawler-searchbox">
                                 <img class = 'loop-img' src="{% static 'images/search.png' %}">
-                                <input type = "search-text no-padding" id = "search" class = 'search-text' brawler-search placeholder="Search for brawler"></h3>
+                                <input type = "search-text no-padding" id = "search" class = 'search-text'  placeholder="Search for brawler"></h3>
                                 </div>
                             
                             <div class="brawlers-box text-nowrap">
