--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -44,24 +44,64 @@ h5 {
 .background-black{
     background-color: black;
     padding-top:6%;
+
+    
 }
+
+.background-blue{
+    padding-top:6.5%;
+    position: relative;
+    border-width: inherit;
+    height: 66%;
+    background-image:url('../images/test3.png'),
+    radial-gradient(circle, rgba(7, 117, 193, 1) 6%, rgba(5, 69, 169, 1) 91%);
+    background-size:100%,100%;
+    animation-name: icons-movement;
+    animation-duration: 75s;
+    animation-iteration-count: infinite;
+}
+@keyframes icons-movement {
+    0% {background-position-y: 0;}
+    50% {background-position-y: -236px;}
+    100% {ackground-position-y: 0px;}
+  }
+
+
+
 .black-rectangle{
-    background-color: black;
     height:18%;
     width:28%;
     position:absolute;
     top:-1%;
+}
+.black-rectangle:before{
+    content: "";
     clip-path: polygon(0 0, 100% 0%, 98% 100%, 0% 100%);
+    background-color: black;
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
 }
 .selected-map{
-    background-color: rgb(139,160,223,255);
     right:0.25vh;
     height: 100%;
     width:85%;
     position:absolute;
+}
+
+.selected-map-clipped-bg{
+    clip-path: polygon(2% 0, 100% 0%, 98% 100%, 0% 100%);
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
     border-bottom: 0.25vh black solid;
     border-top: 0.25vh black solid;
-    clip-path: polygon(2% 0, 100% 0%, 98% 100%, 0% 100%);
 }
 
 .gamemode-icon{
@@ -70,6 +110,7 @@ h5 {
     position:absolute;
     left:5%;
     top:2.5%;
+    z-index: 25;
 }
 .mode-name{
     position:absolute;
@@ -95,23 +136,18 @@ h5 {
     white-space: nowrap;
 }
 
-.background-blue{
-    padding-top:6.5%;
-    position: relative;
-    border-width: inherit;
-    height: 66%;
-    background-image:url('../images/test3.png'),
-    radial-gradient(circle, rgba(7, 117, 193, 1) 6%, rgba(5, 69, 169, 1) 91%);
-    background-size:100%,100%;
-    animation-name: icons-movement;
-    animation-duration: 75s;
-    animation-iteration-count: infinite;
+.map-info{
+    width: 10%;
+    position:absolute;
+    color: #97b0ef;
+    font-size: 1.75vh;
+    top:-15%;
+    right: -3%;
+    font-family: "LilitaOne";
+    white-space: nowrap;
+    z-index: 300;
 }
-@keyframes icons-movement {
-    0% {background-position-y: 0;}
-    50% {background-position-y: -236px;}
-    100% {ackground-position-y: 0px;}
-  }
+
 
 .brawlers-box::-webkit-scrollbar {
     display: none;
